hphp/hack/test/enum_class/typing/access_in_default_arg_write_props.bad.php.legacy_decl.exp
File "access_in_default_arg_write_props.bad.php", line 9, characters 18-31:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_in_default_arg_write_props.bad.php", line 9, characters 11-14:
  The local (enclosing) context provides the capability AccessStaticVariable
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "access_in_default_arg_write_props.bad.php", line 14, characters 26-39:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_in_default_arg_write_props.bad.php", line 14, characters 21-22:
  The local (enclosing) context provides the capability AccessStaticVariable
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "access_in_default_arg_write_props.bad.php", line 17, characters 19-27:
Was expecting a return type hint (Typing[4030])
File "access_in_default_arg_write_props.bad.php", line 17, characters 42-55:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_in_default_arg_write_props.bad.php", line 17, characters 37-38:
  The local (enclosing) context provides the capability AccessStaticVariable
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "access_in_default_arg_write_props.bad.php", line 24, characters 39-54:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "access_in_default_arg_write_props.bad.php", line 24, characters 30-31:
  From this declaration, the context of this function body provides the capability AccessStaticVariable
  File "access_in_default_arg_write_props.bad.php", line 15, characters 5-15:
  But the function being called requires the capability WriteProperty
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "access_in_default_arg_write_props.bad.php", line 24, characters 56-69:
Accessing an enum class constant requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "access_in_default_arg_write_props.bad.php", line 24, characters 30-31:
  The local (enclosing) context provides the capability AccessStaticVariable
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
